1.3.1 (Pending)

1.3.0 (2008-04-25)
* Added: Testing with EasyB (Nicolas Modrzyk).
* Added: Testing with JBehave (John Layton).
* Added: Testing with RSpec (Nick Sieger).
* Added: Nailgun integration for improved user experience when running on
JRuby.
* Added: Cobertura tasks can be invoked for a single project using project
name as prefix to cobetura tasks.
* Added: Cobertura can exclude specified classes from instrumentation.
* Added: ArchiveTask#clean can be used to remove content from a package. 
* Added: Groovy compiler.
* Added: Mechanism to simplify creating extensions (see Extension module).
* Added: To run all test cases 'rake spec'.  Test coverage reports will show
up in html/coverage.  To run failing tests against, 'rake failing'.
* Added: Layout class for controlling the project layout.  Also cleaned up
places where paths were used instead of path names.
* Added: HTTP Basic authentication support (Yuen-Chi Lian).
* Added: EAR packaging (Victor Hugo Borja).
* Added: Profiles(.yaml), based on the code provided by Yanko Ivanov.
* Added: Resources task picks the default mapping from the filter element of
the current profile (if specified). 
* Added: Consolidated API for RJB and JRuby, replacing the now deprecated
JavaWrapper.
* Added: JRuby 1.1 support (Victor Hugo Borja, Nick Sieger).
* Added: IDEA 7 task: use buildr idea7x (Shane Witbeck).
* Added: Experimental support for installing/loading Gems as part of a build.
* Added: Experimental support for YAML configurtion files:
~/.buildr/settings.yaml, build.yaml and profiles.yaml.
* Added: Ability to create a package that is not an artifact and specify the
target file using the :file argument.
* Changed: JUnit/TestNG test cases are selected by superClass or annotations,
not by class-name pattern.
* Changed: Upgraded to Antwrap 0.7.0, thanks to Caleb Powell for relicensing
under Apache License.
* Changed: Upgraded to Rake 0.8, RSpec 1.1, RJB 1.1, OpenJPA 1.0.1.