@@ -1,4 +1,6 @@
 1.3.1 (Pending)
+* Added:  reading files from SFTP server.
+* Changed: Upgraded to Net::SSH 2.0 and Net::SFTP 2.0.
 
 1.3.0 (2008-04-25)
 * Added: Testing with EasyB (Nicolas Modrzyk).
